fix: baseのoverflow-xを削除

--- a/src/css/foundation/_base.scss
+++ b/src/css/foundation/_base.scss
@@ -17,8 +17,6 @@ body {
   height: 100%;
   position: relative;
   line-height: 1;
-
-  overflow-x: hidden;
 }
 
 @include base.tab {
